objects/Calendly__CalendlyAction__c.object
<CustomObject>
    <fields>
        <fullName>Calendly__CustomQuestion10__c</fullName>
        <label>CustomQuestion10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__CustomQuestion1__c</fullName>
        <label>CustomQuestion1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__CustomQuestion2__c</fullName>
        <label>CustomQuestion2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__CustomResponse10__c</fullName>
        <label>CustomResponse10</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Calendly__CustomResponse1__c</fullName>
        <label>CustomResponse1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Calendly__CustomResponse2__c</fullName>
        <label>CustomResponse2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Calendly__EventCancelReason__c</fullName>
        <label>Event Cancel Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__EventCanceled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calendly__EventCancelerName__c</fullName>
        <label>Event Canceler Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__EventCreatedAt__c</fullName>
        <label>Event Created At</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Calendly__EventDescription__c</fullName>
        <label>Event Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Calendly__EventEndTime__c</fullName>
        <label>Event End Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Calendly__EventPrimaryPublisherEmail__c</fullName>
        <label>Event Primary Publisher Email</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__EventPrimaryPublisherName__c</fullName>
        <label>Event Primary Publisher Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__EventStartTime__c</fullName>
        <label>Event Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Calendly__EventSubject__c</fullName>
        <label>Event Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__EventTypeDuration__c</fullName>
        <label>Event Type Duration</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calendly__EventTypeKind__c</fullName>
        <label>Event Type Kind</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__EventTypeName__c</fullName>
        <label>Event Type Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__EventTypeSlug__c</fullName>
        <label>Event Type Slug</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__EventUuid__c</fullName>
        <externalId>true</externalId>
        <label>Event Uuid</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__InviteeCancelReason__c</fullName>
        <label>Invitee Cancel Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__InviteeCanceledAt__c</fullName>
        <label>Invitee Canceled At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Calendly__InviteeCanceled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invitee Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calendly__InviteeCancelerName__c</fullName>
        <label>Invitee Canceler Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__InviteeCreatedAt__c</fullName>
        <label>Invitee Created At</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Calendly__InviteeEmail__c</fullName>
        <label>Invitee Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Calendly__InviteeFirstName__c</fullName>
        <label>Invitee First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__InviteeLastName__c</fullName>
        <label>Invitee Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__InviteeName__c</fullName>
        <label>Invitee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__InviteeTimezone__c</fullName>
        <label>Invitee Timezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__InviteeUuid__c</fullName>
        <externalId>true</externalId>
        <label>Invitee Uuid</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__IsRescheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Rescheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calendly__Location__c</fullName>
        <label>Location</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Calendly__ObjectId__c</fullName>
        <label>Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__RequestId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>unique identifier of a CalendlyAction</description>
        <externalId>true</externalId>
        <label>Request Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Calendly__UtmCampaign__c</fullName>
        <label>UtmCampaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__UtmContent__c</fullName>
        <label>UtmContent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__UtmMedium__c</fullName>
        <label>UtmMedium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__UtmSource__c</fullName>
        <label>UtmSource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly__UtmTerm__c</fullName>
        <label>UtmTerm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CalendlyActions</relationshipLabel>
        <relationshipName>CalendlyActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CalendlyAction</label>
    <listViews>
        <fullName>Calendly__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Calendly__InviteeName__c</columns>
        <columns>Calendly__InviteeEmail__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Calendly__ObjectId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CalendlyAction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CalendlyActions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>